# rust_chatroom

./: readme.md  数据库Init.sql
client/: .env  Cargo.toml
client/src/: main.rs  utils.rs
doc/: interface.md  picture-raw.drawio
server/: .env  Cargo.toml
server/src/: appState.rs  controll.rs  db.rs  entity.rs  lib.rs  main.rs  reference.rs  user.rs  websocket.rs
server/src/controll/: friend.rs  message.rs  user.rs
server/src/entity/: id.rs  id_list.rs  message.rs  relation.rs  text.rs  user.rs
server/src/websocket/: server.rs  session.rs
vue_chat/: package-lock.json  package.json  vue.config.js
vue_chat/src/: App.vue  main.js
vue_chat/src/api/: friend.js  http.js  index.js  mes.js  user.js  web.js
vue_chat/src/assets/ifont/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
vue_chat/src/components/: Friend.vue  History.vue
vue_chat/src/mock/: mock.js
vue_chat/src/router/: index.js
vue_chat/src/views/: Login.vue  Register.vue  Room.vue  RoomRefer.vue
