[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web = "4"
async-stream = "0.3"
env_logger = "0.10"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}