[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-session = { version = "0.7", features = ["cookie-session"] }
async-stream = "0.3"
env_logger = "0.10"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
actix-rt = "2.7.0"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
dotenv = "0.15.0"
chrono = {version = "0.4.19", features = ["serde"]}
sqlx = {version = "0.6.0", default_features = false, features = [
    "mysql",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
]}